crates/xlate/tests/snapshots/golden_matrix__reasoning__chat_to_responses__gpt4o.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-4o",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Think carefully: what is 17 * 23?"
        }
      ]
    },
    {
      "type": "message",
      "role": "assistant",
      "content": [
        {
          "type": "output_text",
          "text": "391",
          "annotations": []
        }
      ]
    },
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "And 17 * 24?"
        }
      ]
    }
  ],
  "max_output_tokens": 2048
}
--- headers ---
content-type: application/json
upstream_streams: false
--- degraded ---
reasoning=dropped*2
